--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       name="description"
       content="Sergei Lushchik is a software engineer who crafts seamless digital experiences and transforms complex challenges into elegant solutions."
     />
-    <meta name="image" content="https://lushchik.com/og.png" />
+    <meta name="image" content="https://lushchik.com/open-graph-image.jpg" />
     <meta property="og:locale" content="en_US" />
     <meta property="og:site_name" content="Sergei Lushchik" />
     <meta property="og:type" content="website" />
@@ -33,14 +33,14 @@
       content="Sergei Lushchik is a software engineer who crafts seamless digital experiences and transforms complex challenges into elegant solutions."
     />
     <meta property="og:url" content="https://lushchik.com/" />
-    <meta property="og:image" content="https://lushchik.com/og.png" />
+    <meta property="og:image" content="https://lushchik.com/open-graph-image.jpg" />
     <meta property="twitter:title" content="Sergei Lushchik" />
     <meta
       property="twitter:description"
       content="Sergei Lushchik is a software engineer who crafts seamless digital experiences and transforms complex challenges into elegant solutions."
     />
     <meta property="twitter:url" content="https://lushchik.com/" />
-    <meta property="twitter:image" content="https://lushchik.com/og.png" />
+    <meta property="twitter:image" content="https://lushchik.com/open-graph-image.jpg" />
     <link rel="icon" type="image/png" sizes="512x192" href="/512.png" />
     <link rel="icon" type="image/png" sizes="192x192" href="/192.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="/180.png" />
